added a new animated button inside header

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <span class="heading-primary-main">outdoors</span>
                 <span class="heading-primary-sub">is where life begins</span>
             </h1>
+            <a href="#" class="btn btn-white btn-animate">discover our toors</a>
             </div>
         </header>
     </body>
