--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     </head>
     <body>
         <header class="header">
-            <div class="class-logo">
-                <img src="img/logo-white.png" alt="logo" class="logo">
+            <div class="header__class-logo">
+                <img src="img/logo-white.png" alt="logo" class="header__logo">
             </div>
-            <div class="text-box">
+            <div class="header__text-box">
             <h1 class="heading-primary">
-                <span class="heading-primary-main">outdoors</span>
-                <span class="heading-primary-sub">is where life begins</span>
+                <span class="heading-primary--main">outdoors</span>
+                <span class="heading-primary--sub">is where life begins</span>
             </h1>
-            <a href="#" class="btn btn-white btn-animate">discover our toors</a>
+            <a href="#" class="btn btn--white btn--animate">discover our toors</a>
             </div>
         </header>
     </body>
